--- a/app/src/main/res/layout/chilc_rcv_layout.xml
+++ b/app/src/main/res/layout/chilc_rcv_layout.xml
@@ -3,17 +3,18 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#E2F1E3"
     app:cardCornerRadius="12dp"
     app:cardElevation="3dp"
     android:layout_marginVertical="6dp"
     android:layout_marginHorizontal="20dp"
-    android:id="@+id/noteChildLayout">
+    app:cardBackgroundColor="@color/fragmentBackgroung"
+    android:id="@+id/ChildLayout">
     <TextView
         android:id="@+id/childSubjectName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Digital Education"
+        android:fontFamily="@font/archivo"
         android:textSize="18sp"
         android:textStyle="normal"
         android:layout_marginHorizontal="20dp"
