--- a/app/src/main/res/layout/rcv_item_layout.xml
+++ b/app/src/main/res/layout/rcv_item_layout.xml
@@ -20,10 +20,10 @@
             android:layout_height="wrap_content"
             android:text="Digital Education"
             android:textColor="@color/black"
+            android:fontFamily="@font/archivo_medium"
             android:layout_marginHorizontal="25dp"
             android:layout_marginVertical="15dp"
-            android:textStyle="normal"
-            android:textSize="22sp"/>
+            android:textSize="20sp"/>
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
